Fixed some problems
1. Transition effect was added for phone-menu block in header
2. While hovering on phone numbers in menu there is underline
3. Subtitle in 'Now On View' section is no longer wider than title itself.
Now title takes all the place, when subtitle takes only 4 grid columns.
4. The photoes in 'More to Explore Online' section looks too wide on tablets
because of wrong container horizontal padding. Changed from 50px to 72px.

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -39,16 +39,20 @@
     position: absolute;
     right: 100%;
     bottom: 50%;
-    transform: translateY(50%);
+    transform: translateY(-10%);
     width: max-content;
     padding-right: 16px;
 
     opacity: 0;
     pointer-events: none;
+
+    transition: opacity $transitionDuration,
+      transform $transitionDuration;
   }
 
   &:hover &__menu {
     opacity: 1;
+    transform: translateY(50%);
     pointer-events: auto;
     cursor: auto;
   }
