--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -34,30 +34,24 @@
   }
 
   &__section-title {
-    margin-bottom: 48px;
-
-    font-weight: 700;
-    font-size: 32px;
-    line-height: 32px;
-    text-align: center;
-    letter-spacing: -1.5px;
-    color: $mainDark;
+    @extend %title;
 
     @include onTabletAndDesktop {
       font-size: 48px;
       line-height: 48px;
     }
 
-    &--now-on-view {
-      &::after {
-        content: "Explore exhibition gallery guides," +
-          "videos, articles, and more.";
-        display: block;
-        letter-spacing: 0;
-        font-size: 16px;
-        line-height: 27px;
-        font-weight: normal;
-      }
+    &--with-subtitle {
+      margin-bottom: 0;
     }
+  }
+
+  &__section-subtitle {
+    @extend %title;
+
+    letter-spacing: 0;
+    font-size: 16px;
+    line-height: 27px;
+    font-weight: normal;
   }
 }
