--- a/src/styles/blocks/phone-menu.scss
+++ b/src/styles/blocks/phone-menu.scss
@@ -18,11 +18,21 @@
   }
 
   &__number {
+    border-bottom: 2px solid transparent;
     color: #fff;
     text-decoration: none;
+    transition: border-color $transitionDuration;
 
-    &:hover {
-      color: $accentMain;
+    &--hover--color {
+      &:hover {
+        color: $accentMain;
+      }
+    }
+
+    &--hover--underline {
+      &:hover {
+        border-color: #fff;
+      }
     }
   }
 
